<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/arms"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arms"
        android:tag="@string/arms"
        android:visibility="invisible"
        app:srcCompat="@drawable/arms" />

    <ImageView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/body"
        android:tag="@string/body"
        android:visibility="visible"
        app:srcCompat="@drawable/body" />

    <ImageView
        android:id="@+id/ears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ears"
        android:tag="@string/ears"
        android:visibility="invisible"
        app:srcCompat="@drawable/ears" />

    <ImageView
        android:id="@+id/eyebrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/eyebrows"
        android:tag="@string/eyebrows"
        android:visibility="invisible"
        app:srcCompat="@drawable/eyebrows" />

    <ImageView
        android:id="@+id/eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/eyes"
        android:tag="@string/eyes"
        android:visibility="invisible"
        app:srcCompat="@drawable/eyes" />

    <ImageView
        android:id="@+id/glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/glasses"
        android:tag="@string/glasses"
        android:visibility="invisible"
        app:srcCompat="@drawable/glasses" />

    <ImageView
        android:id="@+id/hat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hat"
        android:tag="@string/hat"
        android:visibility="invisible"
        app:srcCompat="@drawable/hat" />

    <ImageView
        android:id="@+id/mouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mouth"
        android:tag="@string/mouth"
        android:visibility="invisible"
        app:srcCompat="@drawable/mouth" />

    <ImageView
        android:id="@+id/mustache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mustache"
        android:tag="@string/mustache"
        android:visibility="invisible"
        app:srcCompat="@drawable/mustache" />


    <ImageView
        android:id="@+id/nose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nose"
        android:tag="@string/nose"
        android:visibility="invisible"
        app:srcCompat="@drawable/nose" />

    <ImageView
        android:id="@+id/shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shoes"
        android:tag="@string/shoes"
        android:visibility="invisible"
        app:srcCompat="@drawable/shoes" />

</merge>