<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/potatohead_layout"
        android:layout_width="246dp"
        android:layout_height="306dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arms"
            android:tag="@string/arms"
            android:visibility="invisible"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:tag="@string/body"
            android:visibility="visible"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ears"
            android:tag="@string/ears"
            android:visibility="invisible"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eyebrows"
            android:tag="@string/eyebrows"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eyes"
            android:tag="@string/eyes"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/glasses"
            android:tag="@string/glasses"
            android:visibility="invisible"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hat"
            android:tag="@string/hat"
            android:visibility="invisible"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mouth"
            android:tag="@string/mouth"
            android:visibility="invisible"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mustache"
            android:tag="@string/mustache"
            android:visibility="invisible"
            app:srcCompat="@drawable/mustache" />


        <ImageView
            android:id="@+id/nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nose"
            android:tag="@string/nose"
            android:visibility="invisible"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shoes"
            android:tag="@string/shoes"
            android:visibility="invisible"
            app:srcCompat="@drawable/shoes" />
    </FrameLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:columnCount="6"
        android:orientation="vertical"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/potatohead_layout">

        <CheckBox
            android:id="@+id/arms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/arms" />

        <CheckBox
            android:id="@+id/ears_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/ears" />

        <CheckBox
            android:id="@+id/eyebrows_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/eyebrows" />

        <CheckBox
            android:id="@+id/eyes_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/eyes" />

        <CheckBox
            android:id="@+id/glasses_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/glasses" />

        <CheckBox
            android:id="@+id/hat_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/hat" />

        <CheckBox
            android:id="@+id/mouth_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/mouth" />

        <CheckBox
            android:id="@+id/mustache_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/mustache" />

        <CheckBox
            android:id="@+id/nose_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/nose" />

        <CheckBox
            android:id="@+id/shoes_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="toggle"
            android:text="@string/shoes" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>